# Training-and-placement-website

./: .env.example  DEPLOYMENT.md  Procfile  README.md  STATIC_MEDIA_FIX.md  build.sh  db.sqlite3  pyproject.toml  requirements.txt
Donotech/: settings.py
Donotechapp/: models.py  urls.py
Donotechapp/migrations/: 0043_alter_student_college_and_more.py
templates/: base.html  contact.html  home.html  student_dashboard.html
