[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "donotech"
version = "1.0.0"
description = "A Django-based student management and placement system"
authors = [{name = "DonoTech Team"}]
dependencies = [
    "Django>=5.0.0",
    "Pillow>=10.0.0",
    "django-crispy-forms>=2.0.0",
    "crispy-bootstrap5>=2024.0.0",
    "python-decouple>=3.0.0",
    "gunicorn>=20.0.0",
    "psycopg2-binary>=2.9.0",
    "django-jazzmin>=3.0.0",
    "django-allauth>=64.0.0",
    "djangorestframework>=3.15.0",
    "django-cors-headers>=4.0.0",
    "django-resized>=1.0.0",
    "reportlab>=4.0.0",
    "xhtml2pdf>=0.2.0",
    "weasyprint>=60.0.0",
    "python-docx>=1.0.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "Faker>=20.0.0",
    "requests>=2.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.0.0",
]

[tool.setuptools]
packages = ["Donotech", "Donotechapp"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
